--- a/Valorant-Guide-UIKit/Valorant-Guide-UIKit/View/Base.lproj/Main.storyboard
+++ b/Valorant-Guide-UIKit/Valorant-Guide-UIKit/View/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -34,14 +35,65 @@
                     <view key="view" contentMode="scaleToFill" id="neW-Lc-deI">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="F0u-WA-ZIm">
+                                <rect key="frame" x="0.0" y="103" width="393" height="150"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="b9p-Wh-sRC"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mvA-Oj-3eZ">
+                                    <size key="itemSize" width="138" height="127.00000000000001"/>
+                                    <size key="estimatedItemSize" width="187" height="127"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AgentsCollectionViewCell" id="CPa-KE-44I">
+                                        <rect key="frame" x="0.0" y="11.333333333333334" width="138" height="127.00000000000001"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="sva-UB-49W">
+                                            <rect key="frame" x="0.0" y="0.0" width="138" height="127.00000000000001"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="138" height="127.00000000000001"/>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="DCa-1l-So3" id="w8h-CG-TQe"/>
+                                    <outlet property="delegate" destination="DCa-1l-So3" id="Sb4-tz-CbX"/>
+                                </connections>
+                            </collectionView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="5" translatesAutoresizingMaskIntoConstraints="NO" id="YSP-4t-fna">
+                                <rect key="frame" x="96.666666666666686" y="227" width="200" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="26" id="0je-h5-fZL"/>
+                                    <constraint firstAttribute="width" constant="200" id="5eL-Y2-kcC"/>
+                                </constraints>
+                                <color key="pageIndicatorTintColor" systemColor="systemRedColor"/>
+                                <color key="currentPageIndicatorTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </pageControl>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="uKk-pb-mHh"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="F0u-WA-ZIm" firstAttribute="trailing" secondItem="uKk-pb-mHh" secondAttribute="trailing" id="8on-ul-ofK"/>
+                            <constraint firstItem="YSP-4t-fna" firstAttribute="top" secondItem="uKk-pb-mHh" secondAttribute="top" constant="124" id="Bps-9W-PEb"/>
+                            <constraint firstItem="F0u-WA-ZIm" firstAttribute="top" secondItem="uKk-pb-mHh" secondAttribute="top" id="hEv-1W-ILU"/>
+                            <constraint firstItem="F0u-WA-ZIm" firstAttribute="leading" secondItem="uKk-pb-mHh" secondAttribute="leading" id="tZ5-Ka-v5N"/>
+                            <constraint firstItem="YSP-4t-fna" firstAttribute="centerX" secondItem="neW-Lc-deI" secondAttribute="centerX" id="vXh-aL-JKz"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Home" id="x9m-gH-WYG"/>
+                    <connections>
+                        <outlet property="agentPages" destination="YSP-4t-fna" id="YxG-Dd-GG4"/>
+                        <outlet property="agentsCollectionView" destination="F0u-WA-ZIm" id="3Sk-9t-bjQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FKv-qe-8Sl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-444" y="1054"/>
+            <point key="canvasLocation" x="-445.03816793893128" y="1053.5211267605634"/>
         </scene>
         <!--Home-->
         <scene sceneID="fTk-od-e64">
@@ -136,6 +188,9 @@
         </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemTealColor">
             <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
